--- a/demoHoliday/src/pages/home/home.html
+++ b/demoHoliday/src/pages/home/home.html
@@ -11,4 +11,9 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
+
+  <button ion-button (click)="navigate2Earn()">Earn</button>
+  <button ion-button (click)="navigate2Sorry()">Sorry</button>
+  <button ion-button (click)="navigate2Oh()">Oh</button>
+  <button ion-button (click)="navigate2Men()">Men</button>
 </ion-content>
