edit sorry page

--- a/demoHoliday/src/pages/home/home.html
+++ b/demoHoliday/src/pages/home/home.html
@@ -13,7 +13,7 @@
   </p>
 
   <button ion-button (click)="navigate2Earn()">Earn</button>
-  <button ion-button (click)="navigate2Sorry()">Sorry</button>
+  <button ion-button color="danger" round (click)="navigate2Sorry()">Sorry</button>
   <button ion-button (click)="navigate2Oh()">Oh</button>
   <button ion-button (click)="navigate2Men()">Men</button>
 </ion-content>
