--- a/demoHoliday/src/pages/sorry/sorry.html
+++ b/demoHoliday/src/pages/sorry/sorry.html
@@ -1,18 +1,49 @@
-<!--
-  Generated template for the SorryPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>Sorry</ion-title>
+    <ion-title>
+      <ion-item>
+        <ion-avatar item-start>
+          <ion-row>
+            <img src="../../assets/imgs/Sorry.jpg" width="30px"><label style="font-size: 20px" text-center>Sorry</label>
+          </ion-row>
+        </ion-avatar>
+      </ion-item>
+    </ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+  <ion-list>
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="../../assets/imgs/01.gif">
+      </ion-avatar>
+      <h2>익스큐즈미 (Excuse Me)</h2>
+      <p>https://www.youtube.com/watch?v=FiWLQD9IrnM</p>
+    </ion-item>
 
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="../../assets/imgs/03.gif">
+      </ion-avatar>
+      <h2>직캠 '뿜뿜' MOMOLAND</h2>
+      <p>https://www.youtube.com/watch?v=Xqg3d-WD3YA</p>
+    </ion-item>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="../../assets/imgs/04.gif">
+      </ion-avatar>
+      <h2>베스티 (BESTie)</h2>
+      <p>https://www.youtube.com/watch?v=K6q67qgX0nM</p>
+    </ion-item>
+
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="../../assets/imgs/05.gif">
+      </ion-avatar>
+      <h2>Lotte World HELLOVENUS</h2>
+      <p>https://www.youtube.com/watch?v=NOX3QC0L9i8</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
