--- a/demoHoliday/src/pages/sorry/sorry.html
+++ b/demoHoliday/src/pages/sorry/sorry.html
@@ -46,4 +46,5 @@
       <p>https://www.youtube.com/watch?v=NOX3QC0L9i8</p>
     </ion-item>
   </ion-list>
+  <button ion-button (click)="dontClickMe()">Don't Click Me</button>
 </ion-content>
