--- a/demoHoliday/src/pages/home/home.html
+++ b/demoHoliday/src/pages/home/home.html
@@ -1,19 +1,30 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
+    <ion-title text-center>
+      Home
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
 
-  <button ion-button (click)="navigate2Earn()">Earn</button>
-  <button ion-button color="danger" round (click)="navigate2Sorry()">Sorry</button>
-  <button ion-button (click)="navigate2Oh()">Oh</button>
-  <button ion-button (click)="navigate2Men()">Men</button>
+  <h3 style="text-align: center">Please select your style</h3>
+
+  <ion-row>
+    <ion-col width-50>
+      <button ion-button block (click)="navigate2Earn()">Earn &nbsp;<ion-icon ios="ios-american-football" md="md-american-football"></ion-icon></button>
+    </ion-col>
+    <ion-col width-50>
+      <button ion-button block color="secondary" (click)="navigate2Sorry()">Sorry &nbsp;<ion-icon ios="ios-football" md="md-football"></ion-icon>
+      </button>
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col width-50>
+      <button ion-button block color="danger" (click)="navigate2Oh()">Oh &nbsp;<ion-icon ios="ios-baseball" md="md-baseball"></ion-icon></button>
+    </ion-col>
+    <ion-col width-50>
+      <button ion-button block color="dark" (click)="navigate2Men()">Men &nbsp;<ion-icon ios="ios-basketball" md="md-basketball"></ion-icon></button>
+    </ion-col>
+  </ion-row>
 </ion-content>
