Edit button styles on home page Fixbug

--- a/demoHoliday/src/pages/home/home.html
+++ b/demoHoliday/src/pages/home/home.html
@@ -12,19 +12,19 @@
 
   <ion-row>
     <ion-col width-50>
-      <button ion-button block (click)="navigate2Earn()">Earn &nbsp;<ion-icon ios="ios-american-football" md="md-american-football"></ion-icon></button>
+      <button ion-button block round (click)="navigate2Earn()">Earn &nbsp;<ion-icon ios="ios-american-football" md="md-american-football"></ion-icon></button>
     </ion-col>
     <ion-col width-50>
-      <button ion-button block color="secondary" (click)="navigate2Sorry()">Sorry &nbsp;<ion-icon ios="ios-football" md="md-football"></ion-icon>
+      <button ion-button block round color="secondary" (click)="navigate2Sorry()">Sorry &nbsp;<ion-icon ios="ios-football" md="md-football"></ion-icon>
       </button>
     </ion-col>
   </ion-row>
   <ion-row>
     <ion-col width-50>
-      <button ion-button block color="danger" (click)="navigate2Oh()">Oh &nbsp;<ion-icon ios="ios-baseball" md="md-baseball"></ion-icon></button>
+      <button ion-button block round color="danger" (click)="navigate2Oh()">Oh &nbsp;<ion-icon ios="ios-baseball" md="md-baseball"></ion-icon></button>
     </ion-col>
     <ion-col width-50>
-      <button ion-button block color="dark" (click)="navigate2Men()">Men &nbsp;<ion-icon ios="ios-basketball" md="md-basketball"></ion-icon></button>
+      <button ion-button block round color="dark" (click)="navigate2Men()">Men &nbsp;<ion-icon ios="ios-basketball" md="md-basketball"></ion-icon></button>
     </ion-col>
   </ion-row>
 </ion-content>
