--- a/demoHoliday/src/pages/men/men.html
+++ b/demoHoliday/src/pages/men/men.html
@@ -13,6 +13,15 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content padding style="background-color: #dbd7cb; ">
+  <div style=" text-align: center">
+    <img class="img" src="../../assets/imgs/large_open-uri20161001-39321-1qz5qn.jpg" style="width: 250px; height: 220px; border: 3 solid #dbd7cb ;">
+  </div>
+  <br>
+  <br>
+  <div style="text-align: center; color: #cb9b42">
+    <h2>SIRISAK SUNON</h2>
+    <h4>------  MEN  ------</h4>
+  </div>
+  <br>
 </ion-content>
